gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23873.d
version https://git-lfs.github.com/spec/v1
oid sha256:402b89d2dc5825651edcf5c9c43fdc66a4b17483d90152e9529a0b8320b22c4e
size 402
